# django-datacite

./: .coveragerc  .env.pytest  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pytest.yml  release.yml  test.yml
django_datacite/: __init__.py  admin.py  apps.py  exports.py  imports.py  models.py  renderers.py  settings.py  urls.py  utils.py  validators.py  views.py
django_datacite/migrations/: 0001_initial.py  0002_alter_resource_identifier.py  0003_add_geo_location.py  0004_add_funding_reference.py  0005_add_related_item.py  0006_resource_public.py  0007_use_integer_field_for_order.py  0008_change_ordering.py  0009_change_ordering.py  0010_subjects_m2m.py  0011_alter_subject_options.py  0012_alter_geolocation_options.py
django_datacite/static/datacite/admin/css/: datacite.css
django_datacite/templates/admin/datacite/resource/: change_form.html  change_list.html  copy.html  create_new_version.html  import.html  import_form.html  validate.html
django_datacite/templates/datacite/: citation.html  resource.bib  resource.html
django_datacite/tests/: test_admin.py  test_import.py  test_models.py  test_views.py
requirements/: pytest.txt
testing/config/: settings.py  urls.py
testing/fixtures/: auth.json  datacite.json  sites.json
testing/json/: resource.json
