[metadata]
name = django-datacite
version = attr: django_datacite.VERSION
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ISI-MIP/django-datacite
author = Jochen Klar
email = jochen.klar@pik-potsdam.de
license = MIT
classifiers =
    # see https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    datacite~=1.1.2
    Django>=3.2.0
    requests>=2.25.0


[tool:pytest]
DJANGO_SETTINGS_MODULE = testing.config.settings
testpaths = django_datacite
python_files = test_*.py
pythonpath = testing/
